<resources>
    <string name="app_name">HotelApp</string>

    <!-- Tela Abertura -->
    <string name="title_activity_abertura">Abertura</string>
    <string name="Abertura_btnReservar">Reservar Quarto</string>
    <string name="Abertura_btnLogin">Login</string>
    <!-- Tela Abertura -->

    <!-- Tela Login -->
    <string name="title_activity_login">Login</string>
    <string name="Login_txtLogin">Login:</string>
    <string name="Login_txtSenha">Senha:</string>
    <string name="Login_btnEntrar">Entrar</string>
    <string name="Login_btnVoltar">Voltar</string>
    <!-- Tela Login -->

    <!-- Tela do Hospede Logado -->
    <string name="title_activity_home">Home</string>

    <!-- Opcoes Drawer -->
    <string name="drawerInicio">Início</string>
    <string name="drawerFinanceiro">Financeiro</string>
    <string name="drawerServico">Serviço de Quarto</string>
    <string name="drawerSair">Sair</string>
    <string name="drawerRodape">Ark IT and DEV</string>
    <!-- Opcoes Drawer -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Tela Home -->
    <string name="home_texto_botao_pacotes">Pacotes</string>
    <string name="home_texto_botao_hotel">Sobre</string>
    <string name="home_texto_botao_promocoes">Promoções</string>
    <string name="home_texto_botao_entretenimento">Guia Entretenimento</string>
    <string name="home_texto_botao_locomocao">Locomoção</string>
    <string name="home_texto_botao_mapa">Mapa</string>

    <string name="home_botao_financeiro">Financeiro</string>
    <string name="home_botao_servicos">Serviços</string>
    <string name="home_botao_checkout">Checkout</string>
    <string name="home_botao_sair">Sair</string>
    <!-- Tela Home -->

    <!-- Tela Financeiro -->
    <string name="financeiro_cabecalho">Despesas</string>
    <string name="financeiro_texto_valor_total">Valor Total:</string>
    <string name="financeiro_texto_observacao_valor_total">*Valor total sem soma da diária.</string>

    <string name="financeiro_titulo_estadia">Estadia</string>
    <string name="financeiro_estadia_responsavel">Responsável:</string>
    <string name="financeiro_estadia_nome_responsavel">João Paulo</string>
    <string name="financeiro_estadia_qtdpessoas">Qtd de Pessoas:</string>
    <string name="financeiro_estadia_pessoas">2 Adultos e 3 crianças</string>
    <string name="financeiro_estadia_pacote">Pacote:</string>
    <string name="financeiro_estadia_nomepacote">Luxo</string>
    <string name="financeiro_estadia_valor_diaria">Valor Diário:</string>
    <string name="financeiro_estadia_diaria">R$ 400,00</string>
    <string name="financeiro_estadia_periodo_contratado">Período Contratado:</string>
    <string name="financeiro_estadia_tempo_periodo_contratado">7 dias e 6 noites</string>

    <string name="financeiro_titulo_servico_de_quarto">Serviço de Quarto</string>
    <string name="financeiro_servicoquarto_titulo_pedido1">Ribeye 380g</string>
    <string name="financeiro_servicoquarto_preco_pedido1">R$ 250,00</string>
    <string name="financeiro_servicoquarto_titulo_pedido2">Trop Kobe Beef-Baby beef c batata soufflés</string>
    <string name="financeiro_servicoquarto_preco_pedido2">R$ 240,00</string>
    <string name="financeiro_servicoquarto_titulo_pedido3">The Burguer Lab Star</string>
    <string name="financeiro_servicoquarto_preco_pedido3">R$ 200,00</string>
    <string name="financeiro_servicoquarto_titulo_pedido4">Lagosta ao Thermidor</string>
    <string name="financeiro_servicoquarto_preco_pedido4">R$ 190,00</string>
    <string name="financeiro_servicoquarto_titulo_pedido5">Camarão a Provençal</string>
    <string name="financeiro_servicoquarto_preco_pedido5">R$ 150,00</string>

    <string name="financeiro_titulo_demais">Demais Despesas</string>
    <string name="financeiro_demais_titulo_gasto1">Spa</string>
    <string name="financeiro_demais_preco_gasto1">R$ 150,00</string>
    <string name="financeiro_demais_titulo_gasto2">Massagem Oriental</string>
    <string name="financeiro_demais_preco_gasto2">R$ 35,00</string>
    <!-- Tela Financeiro -->

    <string name="title_activity_financeiro">Financeiro</string>

    <string name="servicos_texto_qtd_total">Quantidade Total de Itens</string>
    <string name="servicos_texto_botao">Ver Itens Adicionados</string>
    <string name="servicos_carrinho_texto_botao">Confirmar Pedido</string>

    <string name="title_activity_carrinho">Carrinho</string>
    <!-- Tela do Hospede Logado -->

    <!-- Menu Default -->
    <string name="title_activity_contato">Contato</string>
    <string name="action_contactar">Entrar em Contato</string>
    <string name="action_localizacao">Localização</string>
    <!-- Menu Default -->

    <!-- Menu Contactar -->
    <string name="action_ligar">Ligar</string>
    <!-- Menu Contactar -->

    <!-- Menu Financeiro -->
    <string name="action_pedido">Conferir Pedido</string>
    <!-- Menu Financeiro -->

    <!-- Tela Contato -->
    <string name="Contato_txtEmail">E-mail:</string>
    <string name="Contato_txtMensagem">Mensagem:</string>
    <string name="Contato_btnEnviar">Enviar</string>
    <string name="Contato_txtLocalizacao">Localização</string>
    <string name="Contato_txtEndereco">Rua dos Programadores</string>
    <!-- Tela Contato -->

    <!-- Tela Reservar -->
    <string name="title_activity_reservar_quarto">Reservar Quarto</string>
    <string name="Reservar_quarto_qtd_criancas">Qtd Criancas:</string>
    <string name="Reservar_quarto_qtd_adultos">Qtd Adulto:</string>
    <string name="Reservar_txt_disponilidade">Disponibilidade:</string>

    <string-array name="Reservar_comboBoxAdulto">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>Mais</item>
    </string-array>

    <string-array name="Reservar_comboBoxCrianca">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>Mais</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <!-- Tela Reservar -->

    <!-- Home_Sobre -->
    <string name="title_activity_home_sobre">Home_Sobre</string>
    <string name="sobre_titulo">Sobre</string>
    <string name="sobre1">
    Situado no Centro Histórico de Porto Alegre, o Hotel Continental Business é uma oferta sob medida para quem busca acessibilidade, localização privilegiada para negócios e turismo, além de muito conforto.
    </string>
    <string name="sobre2">
    O hotel oferece apartamentos de acordo com suas necessidades, com andares completamente reformulados, para a melhor experiência em hospedagem na capital gaúcha.
    </string>
    <string name="sobre3">
    Inaugurado em 1999, no centro da cidade, o Hotel Continental Business se destaca pela qualidade de hospedagem e por oferecer um conjunto de serviços que tornam a estadia dos hóspedes uma experiência bastante agradável e produtiva.
    </string>
    <string name="sobre4">
    Conta com mais de 30 anos de tradição hoteleira, inovando sempre, com o foco no compromisso de satisfazer as necessidades de seus clientes e fazer com que todos se sintam em casa.
    </string>

    <string name="sobre_titulo_servicos">Serviços</string>
    <string name="sobre_servicos1">
        - 126 apartamentos, com TV a cabo, ar condicionado e secador de cabelo;
    </string>
    <string name="sobre_servicos2">
        - Salas para eventos e reuniões;
    </string>
    <string name="sobre_servicos3">
        - Room service 24 horas;
    </string>
    <string name="sobre_servicos4">
        - Business Center;
    </string>
    <string name="sobre_servicos5">
        - Conexão Wireless Free em todo o hotel;
    </string>
    <string name="sobre_servicos6">
        - Apartamentos adaptados para pessoas com necessidades especiais;
    </string>
    <string name="sobre_servicos7">
        - Andar para pessoas alérgicas;
    </string>
    <string name="sobre_servicos8">
        - Cofres;
    </string>
    <string name="sobre_servicos9">
        - Telefone com discagem direta DDD e DDI;
    </string>
    <string name="sobre_servicos10">
        - Serviço de lavanderia;
    </string>
    <string name="sobre_servicos11">
        - Estacionamento com manobrista;
    </string>

    <string name="sobre_titulo_gastronomia">Gastronomia</string>
    <string name="sobre_gastronomia1">
        O Hotel Continental Business possui Coffee-Shop, Room Service 24horas com elaboração de pratos rápidos e lanches preparados por um chefe de cozinha. A localização central do Continental Business permite ao hóspede escolher entre as diversas opções de bares e restaurantes.
    </string>

    <string name="sobre_titulo_localizacao">Localização</string>
    <string name="sobre_localizacao1">
        Localizado no centro de São Bernardo do Campo, Rua Java, o Hotel Royals tem acesso privilegiado para turismo e negócios. É nesta região da cidade que estão concentradas as principais atividades de negócios, os centros culturais, os prédios históricos e lindas praças arborizadas.
    </string>
    <!-- Home_Sobre -->

    <!-- Tela Servico -->
    <string name="btnAddPedido">ADD</string>
    <string name="title_activity_servivos">Servicos</string>
    <string name="title_activity_checkout">Checkout</string>
    <!-- Tela Servico -->

    <!-- Tela Checkout -->
    <string name="checkout_texto_finalizar_checkout">Finalizar Checkout</string>
    <!-- Tela Checkout -->
    
</resources>
