<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Home$PlaceholderFragment"
    android:background="@drawable/home_background">

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity" >

        <Button
            android:id="@+id/btnSobre"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:drawableTop="@drawable/icone_hotel"
            android:text="@string/home_texto_botao_hotel"
            android:background="@drawable/botao_background"/>

        <Button
            android:id="@+id/btnGuiaEntretenimento"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="70dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:drawableTop="@drawable/icone_entretenimento"
            android:text="@string/home_texto_botao_entretenimento"
            android:background="@drawable/botao_background"/>

        <Button
            android:id="@+id/btnPacotes"
            android:layout_marginTop="46dp"
            android:layout_marginLeft="40dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:drawableTop="@drawable/icone_pacote"
            android:text="@string/home_texto_botao_pacotes"
            android:background="@drawable/botao_background"/>

        <Button
            android:id="@+id/btnPromocoes"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="70dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:drawableTop="@drawable/icone_promocoes"
            android:text="@string/home_texto_botao_promocoes"
            android:background="@drawable/botao_background"/>

        <Button
            android:id="@+id/btnLocomocao"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:drawableTop="@drawable/icone_locomocao"
            android:text="@string/home_texto_botao_locomocao"
            android:background="@drawable/botao_background"/>

        <Button
            android:id="@+id/btnMapa"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="70dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:drawableTop="@drawable/icone_mapa"
            android:text="@string/home_texto_botao_mapa"
            android:background="@drawable/botao_background"/>

    </GridLayout>

</LinearLayout>
