<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="br.metodista.hotelapp.activities.Contato">

    <TextView
        android:text="@string/Contato_txtEmail"
        android:textSize="@dimen/login_contato_tamanho_texto_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@android:color/white"/>

    <TextView
        android:text="@string/Contato_txtMensagem"
        android:textSize="@dimen/login_contato_tamanho_texto_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginTop="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/txtMensagem"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/Contato_btnEnviar"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="______________________________________________________"
        android:textColor="@android:color/holo_orange_light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Contato_txtLocalizacao"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="35dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Contato_txtEndereco"
        android:textColor="@android:color/holo_orange_light"/>

</LinearLayout>