<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".Home"
    android:background="@drawable/home_background">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
        android:layout_gravity="start" android:name="br.metodista.hotelapp.activities.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/GridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity" >

        <Button
            android:id="@+id/btnHotel"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="55dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:drawableTop="@drawable/icone_hotel"
            android:text="@string/home_texto_botao_hotel"
            android:background="@drawable/botao_background"/>

        <Button
            android:id="@+id/btnGuiaEntretenimento"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="75dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:drawableTop="@drawable/icone_entretenimento"
            android:text="@string/home_texto_botao_entretenimento"
            android:background="@drawable/botao_background"/>

        <Button
            android:id="@+id/btnPacotes"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="55dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:drawableTop="@drawable/icone_pacote"
            android:text="@string/home_texto_botao_pacotes"
            android:background="@drawable/botao_background"/>

        <Button
            android:id="@+id/btnPromocoes"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="75dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:drawableTop="@drawable/icone_promocoes"
            android:text="@string/home_texto_botao_promocoes"
            android:background="@drawable/botao_background"/>

        <Button
            android:id="@+id/btnLocomocao"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="55dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:drawableTop="@drawable/icone_locomocao"
            android:text="@string/home_texto_botao_locomocao"
            android:background="@drawable/botao_background"/>

        <Button
            android:id="@+id/btnMapa"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="75dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:drawableTop="@drawable/icone_mapa"
            android:text="@string/home_texto_botao_mapa"
            android:background="@drawable/botao_background"/>

    </GridLayout>

</android.support.v4.widget.DrawerLayout>
