
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.metodista.hotelapp.activities.Servicos"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/financeiro_texto_valor_total"
            android:textColor="@android:color/holo_orange_light"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/servicosValorTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 120,00"
            android:textColor="@android:color/holo_orange_light"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicos_texto_qtd_total"
            android:textColor="@android:color/holo_orange_light"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/servicosQtdTotalItens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textColor="@android:color/holo_orange_light"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnListaCarrinho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servicos_texto_botao"
        android:layout_gravity="center"
        android:background="@drawable/botao_background"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"/>

    <ExpandableListView
        android:id="@+id/expList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"/>

</LinearLayout>
