<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.metodista.hotelapp.activities.ReservarQuarto"
    android:background="@drawable/reserva_quarto_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Reservar_quarto_qtd_adultos"
            android:textSize="@dimen/login_contato_tamanho_texto_textview"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Reservar_quarto_qtd_criancas"
            android:textSize="@dimen/login_contato_tamanho_texto_textview"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/cbx_qtd_adulto"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/Reservar_comboBoxAdulto"
            android:background="@android:color/darker_gray"/>

        <Spinner
            android:id="@+id/cbx_qtd_crianca"
            android:layout_width="100dp"
            android:layout_marginLeft="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/Reservar_comboBoxCrianca"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Reservar_txt_disponilidade"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/login_contato_tamanho_texto_textview"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/darker_gray">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Suite Economica"
            android:id="@+id/checkBoxEconomica" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Suite Basica"
            android:id="@+id/checkBoxBasica" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Suite Luxo"
            android:id="@+id/checkBoxLuxo"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="#4D000000">

        <ListView
            android:id="@+id/listaSuitesDisponiveis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </ScrollView>

</LinearLayout>
